--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,36 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34;
+  color: white;
+}
+
+button {
+  line-height: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: none;
+  border-radius: 3px;
+  border: 1px solid white;
+  color: white;
+  cursor: pointer;
+}
+
+.menu {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
 }
 
 code {
